--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/p2"
     tools:context=".RegistActivity">
     <EditText
         android:layout_width="300dp"
@@ -34,4 +35,10 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:text="返回登陆"/>
+    <ImageView
+        android:id="@+id/regist_imageview"
+        android:layout_width="100dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:src="@drawable/p1"/>
 </LinearLayout>
