--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -21,24 +21,23 @@
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:hint="请输入你的密码"/>
+
     <Button
         android:id="@+id/bt_regist_save"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:text="注册"/>
+        android:background="@drawable/shape_2"
+        android:text="注册" />
+
     <Button
         android:id="@+id/bt_regist_cancel"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:text="返回登陆"/>
-    <ImageView
-        android:id="@+id/regist_imageview"
-        android:layout_width="100dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:src="@drawable/p1"/>
+        android:background="@drawable/shape_2"
+        android:text="返回登陆" />
+
 </LinearLayout>
