--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,19 @@
     android:layout_height="match_parent"
     android:background="@drawable/p3"
     tools:context=".LoginActivity">
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:src="@drawable/lu"
+        android:layout_marginTop="50dp"
+        />
 
     <EditText
         android:id="@+id/et_login_user"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
         android:hint="请输入账号"/>
     <EditText
         android:id="@+id/et_login_password"
@@ -26,24 +32,24 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="350dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:background="@drawable/shape_2"
+        android:background="@drawable/shape_4"
         android:gravity="center"
-        android:text="登    录"
+        android:text="登    陆"
         android:textSize="20dp"
         />
 
     <TextView
         android:id="@+id/tv_regist"
-        android:layout_width="350dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:background="@drawable/shape_2"
+        android:background="@drawable/shape_4"
         android:text="注   册"
         android:textSize="20dp" />
     <!--<Button-->
