--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -10,24 +10,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/p1">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="?attr/colorPrimary"
+            android:layout_height="50dp"
+
+            android:background="@color/colorPrimaryDark"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         </android.support.v7.widget.Toolbar>
-        <WebView
-            android:id="@+id/webview"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="9">
+        <!--<WebView-->
+            <!--android:id="@+id/webview"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="700dp">-->
 
-        </WebView>
+
+        <!--</WebView>-->
+        <Button
+            android:id="@+id/bu_heida"
+            android:text="开启黑大之旅"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:background="@drawable/shape_4"
+            android:layout_marginTop="400dp"
+            android:layout_gravity="center"/>
+
 
     </LinearLayout>
 
