--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/p2"
+    android:background="@drawable/heida1"
     tools:context=".RegistActivity">
     <EditText
         android:layout_width="300dp"
@@ -28,7 +28,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:background="@drawable/shape_2"
+        android:background="@drawable/shape_4"
         android:text="注册" />
 
     <Button
@@ -37,7 +37,7 @@
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:background="@drawable/shape_2"
+        android:background="@drawable/shape_4"
         android:text="返回登陆" />
 
 </LinearLayout>
