--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -15,17 +15,11 @@
     <TextView
         android:id="@+id/fruit_name2"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:layout_gravity="clip_vertical"
         android:textSize="10dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/cardview_dark_background"
         android:layout_marginLeft="10dp"/>
-    <ImageView
-        android:id="@+id/fruit_image"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="clip_vertical"
-        android:layout_marginLeft="10dp"
-        />
+
 
 </LinearLayout>
