--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/backup"
         android:icon="@drawable/icon1"
@@ -16,7 +17,7 @@
     <item
         android:id="@+id/settings"
         android:icon="@drawable/icon3"
-        android:title="Backp"
+        android:title="返回登陆"
         app:showAsAction="never"
         />
 </menu>
