--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="color21">#3C55F7</color>
     <color name="color22">#F343F014</color>
     <color name="color23">#F1500A</color>
-    <color name="color24">#C0B12E</color>
+    <color name="color24">#1A8D1F</color>
     <color name="color25">#00ACC1</color>
     <color name="color26">#D81B60</color>
     <color name="color27">#FFB300</color>
