--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_4"
-        android:text="黑大最漂亮的人是谁？"
+        android:text="黑大最有智慧的人是谁？"
         android:layout_marginRight="40dp"
         android:textSize="20dp"/>
     <ImageView
