--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/settings"
         android:icon="@drawable/icon3"
-        android:title="返回登陆"
+        android:title="返回登录"
         app:showAsAction="never"
         />
 </menu>
