--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,20 @@
         android:layout_marginTop="50dp"
         android:inputType="textPassword"
         android:hint="请输入密码"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <CheckBox
+            android:id="@+id/remember_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:text="记住密码"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/login"
@@ -38,7 +52,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/shape_4"
         android:gravity="center"
-        android:text="登    陆"
+        android:text="登    录"
         android:textSize="20dp"
         />
 
