--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/nav_header_relative"
     android:layout_width="match_parent"
     android:layout_height="180dp"
-    android:padding="10dp"
     android:background="?attr/colorPrimary">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_header_imageview"/>
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/lu"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/lu"
-
         android:layout_centerInParent="true"/>
     <TextView
         android:id="@+id/mail"
