--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="color25">#00ACC1</color>
     <color name="color26">#D81B60</color>
     <color name="color27">#FFB300</color>
+    <color name="colorDark">#050505</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
