--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color25">#00ACC1</color>
     <color name="color26">#D81B60</color>
     <color name="color27">#FFB300</color>
+    <color name="ccc">#A3C539</color>
 </resources>
